test/log/shift/vsll_vi_u32_m.txt
vsll_vi_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsll_vi_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsll_vi_u32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vsll_vi_u32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vsll_vi_u32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vsll_vi_u32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vsll_vi_u32_m.c:22:6: warning: no previous prototype for 'vsll_vi_u32_m_golden' [-Wmissing-prototypes]
   22 | void vsll_vi_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vsll_vi_u32_m.c: In function 'vsll_vi_u32_m_golden':
vsll_vi_u32_m.c:22:51: warning: unused parameter 'maskoff' [-Wunused-parameter]
   22 | void vsll_vi_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                                         ~~~~~~~~~~^~~~~~~
vsll_vi_u32_m.c:22:69: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vsll_vi_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                                                           ~~~~~~~~~~^
vsll_vi_u32_m.c:22:80: warning: unused parameter 'imm' [-Wunused-parameter]
   22 | void vsll_vi_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                                                                       ~~~~~~~~~^~~
vsll_vi_u32_m.c: In function 'main':
vsll_vi_u32_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsll_vi_u32_m.c:48:26: error: incompatible type for argument 1 of 'vsll_vi_u32_m_golden'
   48 |     vsll_vi_u32_m_golden(exp_mask,exp_maskoff,exp_a,exp_imm,exp_result);
      |                          ^~~~~~~~
      |                          |
      |                          uint64_t * {aka long long unsigned int *}
vsll_vi_u32_m.c:22:36: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vsll_vi_u32_m_golden(bool16_t mask,uint32_t *maskoff,uint32_t *a,uint32_t imm,uint32_t *exp_result) {
      |                           ~~~~~~~~~^~~~
vsll_vi_u32_m.c:56:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   56 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
vsll_vi_u32_m.c:33:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   33 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsll_vi_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsll_vi_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsll_vi_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed